--- a/src/blocks/globals.css
+++ b/src/blocks/globals.css
@@ -1,1 +1,9 @@
 @import url(../vendor/normalize.css);
+@import url(../blocks/navigation.css);
+@import url(../blocks/header.css);
+
+.page {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+}
