--- a/src/blocks/navigation.css
+++ b/src/blocks/navigation.css
@@ -1,35 +1,60 @@
 .navigation {
-    display: flex;
-    justify-content: space-between;
-    width: 70%;
-    margin: 0 auto;
-    margin-top: 38px;
+  display: flex;
+  justify-content: space-between;
+  width: 70%;
+  margin: 32px auto 89px;
+  margin-top: 38px;
+  font-family: "Poppins", sans-serif;
+  align-items: center;
 }
 
 .navigation__image {
-    width: 100%;
-    max-width: 154px;
-    max-height: 41px;
+  width: 100%;
+  max-width: 154px;
+  max-height: 41px;
 }
 
 .navigation__menu {
-    padding: 0;
-    list-style: none;
-    display: flex;
-    gap: 56px;
-    margin: 0;
+  padding: 0;
+  list-style: none;
+  display: flex;
+  gap: 56px;
+  margin: 0;
+  display: flex;
+  align-items: center;
+  height: 30px;
 }
 
 .navigation__menu_item {
-    height: 30px ;
+  display: flex;
+  align-items: center;
 }
 
 .navigation__menu_item a {
-    text-decoration: none;
+  text-decoration: none;
+  color: #000000;
+  font-size: 2rem;
+  font-weight: 500;
+  line-height: 1.25;
+  height: 30px;
+  display: flex;
+  align-items: center;
+
 }
 
 .navigation__btn {
-    width: 100%;
-    max-width: 207px;
-    height: 54px;
+  width: 100%;
+  max-width: 207px;
+  height: 54px;
+  border-radius: 60px;
+  padding: 0;
+  background-color: #ff0000;
+  text-decoration: none;
+  color: #ffff;
+  font-size: 2rem;
+  font-weight: 500;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
 }
