--- a/src/blocks/header.css
+++ b/src/blocks/header.css
@@ -1,3 +1,53 @@
 .header {
-    width: 70%;
+  width: 70%;
+  display: flex;
+  justify-content: space-between;
+  font-family: "Poppins", sans-serif;
+  font-weight: 400;
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 100%;
+  max-width: 545px;
+}
+
+.header__image {
+  width: 100%;
+  max-width: 400px;
+  max-height: 535px;
+}
+
+.header__title {
+  margin: 0 0 18px;
+  width: 100%;
+  max-width: 377px;
+  font-family: "Koh Santepheap", sans-serif;
+  font-size: 4.8rem;
+  font-weight: 400;
+  line-height: 1.2;
+}
+
+.header__subtitle {
+  margin: 0 0 48px;
+  width: 100%;
+  max-width: 545px;
+  font-weight: 400;
+  font-size: 2.4rem;
+  line-height: 1.6;
+}
+
+.header__button {
+  padding: 0;
+  width: 100%;
+  max-width: 229px;
+  height: 54px;
+  border-radius: 60px;
+  background-color: #ff0000;
+  color: #fff;
+  font-size: 2rem;
+  font-weight: 500;
+  line-height: 1.5;
 }
