--- a/src/blocks/globals.css
+++ b/src/blocks/globals.css
@@ -2,6 +2,7 @@
 @import url(../blocks/navigation.css);
 @import url(../blocks/header.css);
 @import url(../blocks/hero.css);
+@import url(../blocks/populares.css);
 
 .page {
   display: flex;
