--- a/src/blocks/globals.css
+++ b/src/blocks/globals.css
@@ -4,9 +4,13 @@
 @import url(../blocks/hero.css);
 @import url(../blocks/populares.css);
 
+body{
+  background-color: #f2f2f2;
+}
 .page {
   display: flex;
   align-items: center;
   flex-direction: column;
   width: 100%;
+  
 }
