--- a/src/blocks/populares.css
+++ b/src/blocks/populares.css
@@ -30,7 +30,7 @@
   width: 100%;
   flex-direction: column;
   align-items: center;
-  background-color: #f8f5f2;
+  background-color: #ffffff;
   border-radius: 16px;
 }
 
