--- a/src/blocks/header.css
+++ b/src/blocks/header.css
@@ -19,6 +19,11 @@
   width: 100%;
   max-width: 400px;
   max-height: 535px;
+  transition: ease-in-out 0.5s;
+}
+
+.header__image:hover {
+  transform: scale(1.1);
 }
 
 .header__title {
@@ -51,4 +56,10 @@
   font-size: 2rem;
   font-weight: 500;
   line-height: 1.5;
+  transition: ease-in-out 0.3s;
+  cursor: pointer;
+}
+
+.header__button:hover {
+  transform: scale(1.1);
 }
