--- a/src/blocks/populares.css
+++ b/src/blocks/populares.css
@@ -39,7 +39,13 @@
   width: 100%;
   max-width: 300px;
   top: -80px;
+  transition: ease-in-out 0.3s;
 }
+
+.populares__cards_title_img:hover {
+  transform: scale(1.1);
+}
+
 .populares__cards_item_title {
   width: 100%;
   max-width: 299px;
