--- a/src/blocks/globals.css
+++ b/src/blocks/globals.css
@@ -5,6 +5,7 @@
 @import url(../blocks/populares.css);
 @import url(../blocks/comentarios.css);
 @import url(../blocks/forms.css);
+@import url(../blocks/footer.css);
 
 
 body{
