--- a/src/blocks/footer.css
+++ b/src/blocks/footer.css
@@ -1,7 +1,7 @@
 .footer {
   width: 70%;
   font-family: "Koh Santepheap", sans-serif;
-  margin-bottom: 40px;
+  margin: 100px 0 40px;
 }
 
 .footer__list {
