--- a/src/blocks/comentarios.css
+++ b/src/blocks/comentarios.css
@@ -124,3 +124,11 @@
   transition-duration: 0ms;
   color: #870202;
 }
+
+@media screen and (min-width: 1280px) and (max-width: 1920px) {
+  
+  .comentarios-list {
+    grid-template-columns: repeat(3, 1fr);
+    row-gap: 90px;
+  }
+} 
