--- a/src/blocks/header.css
+++ b/src/blocks/header.css
@@ -63,3 +63,11 @@
 .header__button:hover {
   transform: scale(1.1);
 }
+
+@media screen and (min-width: 1280px) and (max-width: 1920px) {
+
+  .header__image {
+    max-height: 400px;
+    object-fit: contain;
+  }
+}
