--- a/src/blocks/hero.css
+++ b/src/blocks/hero.css
@@ -52,3 +52,14 @@
   font-size: 2rem;
   line-height: 1.6;
 }
+
+@media screen and (min-width: 1280px) and (max-width: 1920px) {
+
+  .hero__img {
+    width: 100%;
+    max-width: 400px;
+    height: 400px;
+    padding-right: 30px;
+  }
+
+}
