--- a/src/blocks/header.css
+++ b/src/blocks/header.css
@@ -64,7 +64,7 @@
   transform: scale(1.1);
 }
 
-@media screen and (min-width: 1280px) and (max-width: 1920px) {
+@media screen and (max-width:1280px) {
 
   .header__image {
     max-height: 400px;
