--- a/src/blocks/populares.css
+++ b/src/blocks/populares.css
@@ -77,8 +77,7 @@
   line-height: 1.26;
 }
 
-@media screen and (min-width: 1280px) and (max-width: 1920px) { 
-
+@media screen and (max-width: 1280px) {
   .populares__cards_title_img {
     max-width: 230px;
   }
