--- a/src/blocks/hero.css
+++ b/src/blocks/hero.css
@@ -1,19 +1,23 @@
 .hero {
   width: 70%;
+  max-width: 1440px;
   display: flex;
   margin: 120px 0;
-  justify-content: space-between;
+  gap: 50px;
 }
 
 .hero__img {
-  width: 100%;
+  width: 50%;
   max-width: 592px;
   transition: ease-in-out 0.5s;
-  margin-right: 30px;
+}
+
+.hero__img__mobile {
+  display: none;
 }
 
 .hero__img:hover {
-  transform: scale(1.09);
+  transform: scale(1.03);
 }
 
 .hero__container {
@@ -28,7 +32,6 @@
 .hero__title {
   margin: 0 0 8px;
   width: 100%;
-  max-width: 113px;
   color: #ff0000;
   font-size: 2.4rem;
   font-weight: 400;
@@ -47,20 +50,90 @@
 .hero__text {
   margin: 0;
   width: 100%;
-  max-width: 520px;
+  max-width: 334px;
   font-family: "Poppins", sans-serif;
   font-weight: 400;
-  font-size: 2rem;
+  font-size: 2.3rem;
   line-height: 1.6;
 }
 
-@media screen and (max-width:1280px) {
+@media screen and (min-width: 1024px) and (max-width: 1279px) {
 
   .hero__img {
-    width: 100%;
-    max-width: 400px;
-    height: 400px;
-    margin-right: 20px;
+    max-width: 358px;
+  }
+
+  .hero__subtitle {
+    font-size: 4rem;
+  }
+
+  .hero__text {
+    font-size: 1.6rem;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+
+  .hero {
+    width: 90%;
+  }
+
+  .hero__subtitle{
+    font-size: 3.5rem;
+  }
+
+  .hero__text{
+    font-size: 1.7rem;
+  }
+
+  .hero__img{
+    max-width: 358px;
+  }
+
+  .hero__img:hover{
+    transform: initial;
+  }
+}
+
+@media screen and (min-width: 320px) and (max-width: 767px) {
+
+  .hero {
+    width: 90%;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .hero__container{
+    gap: 30px;
+    align-items: center;
+  }
+
+  .hero__img {
+    display: none;
+  }
+
+  .hero__title{
+    text-align: center;
+    font-size: 3rem;
+    margin: 0;
+    
+  }
+
+  .hero__img__mobile {
+    display: inline;
+    width: 80%;
+  }
+  
+  .hero__subtitle {
+    font-size: 2.3rem;
+    margin: 0;
+    text-align: center;
+    
+  }
+
+  .hero__text {
+    font-size: 1.7rem;
+    text-align: center;
   }
 
 }
