--- a/src/blocks/navigation.css
+++ b/src/blocks/navigation.css
@@ -7,7 +7,6 @@
   font-family: "Poppins", sans-serif;
   align-items: center;
   color: #232323;
-  
 }
 
 .navigation__image {
@@ -137,7 +136,6 @@
 }
 
 @media screen and (min-width: 1024px) and (max-width: 1279px) {
-
   .navigation__image {
     max-width: 130px;
   }
@@ -146,14 +144,12 @@
     font-size: 1.8rem;
   }
 
-  .navigation__btn{
+  .navigation__btn {
     max-width: 170px;
   }
-
 }
 
 @media screen and (min-width: 768px) and (max-width: 1023px) {
-
   .navigation {
     width: 90%;
   }
@@ -162,7 +158,7 @@
     transform: initial;
   }
 
-  .navigation__menu{
+  .navigation__menu {
     gap: 40px;
   }
 
@@ -175,13 +171,13 @@
     transform: initial;
   }
 
-  .navigation__btn{
+  .navigation__btn {
     width: 25%;
   }
 }
 
 @media screen and (min-width: 320px) and (max-width: 767px) {
-  .navigation{
+  .navigation {
     width: 90%;
     flex-direction: column;
     gap: 30px;
@@ -193,13 +189,14 @@
   }
 
   .navigation__image {
-    width:100%;
+    width: 100%;
   }
 
-  .navigation__menu{
+  .navigation__menu {
+    gap: 20px;
   }
-  
-  .navigation__menu_text{
+
+  .navigation__menu_text {
     font-size: 1.7rem;
   }
 
